<resources>
    <string name="app_name">Ease Off Application</string>
    <string name="WelcomeText">Welcome to Ease Off</string>
    <string name="LoginLbl">Login</string>
    <string name="EmailPlaceholder">Enter your username</string>
    <string name="PwdPlaceholder">Enter your password</string>
    <string name="SignUpLbl">Sign Up</string>
    <string name="SignUpText">Sign Up to Ease Off!</string>
    <string name="SignUptxt1">My Personal Details</string>
    <string name="SignUptxt2">My Account Registration</string>
    <string name="SignUpNameLbl">Full Name :</string>
    <string name="SignUpNameHint">Enter a username</string>
    <string name="SignUpDobLbl">Date Of Birth :</string>
    <string name="MaleLbl">Male</string>
    <string name="FemaleLbl">Female</string>
    <string name="SignUpGenderLbl">Gender :</string>
    <string name="termsAconditions">I accept the Terms and Conditions</string>
    <string name="SignUpEmailLbl">Email :</string>
    <string name="SignUpPwdLbl">Password :</string>
    <string name="SignUpPwdHint">Create your Password</string>
    <string name="SignUpDobHint">Enter your Birth Year</string>
    <string name="DailyMedLbl">Daily Medicine</string>
    <string name="BeautyLbl">Beauty</string>
    <string name="PharmacyLbl">Pharmacy</string>
    <string name="DiseasesUpdtLbl">Diseases Update</string>
    <string name="HelathcareLbl">Healthcare</string>
    <string name="EathealthyLbl">Eat Healthy</string>
    <string name="StayfitLbl">Stay Fit</string>
    <string name="MindYouLbl"><![CDATA[Mind & You]]></string>
    <string name="DashboardLbl">Dashboard</string>
    <string name="mind_journal_lbl">Thought Journal</string>
    <string name="mind_sleep_lbl">Sleep</string>
    <string name="mind_meditate_lbl">Meditation</string>
    <string name="mind_tips_lbl">Mind Tips</string>
    <string name="mindSleepHeader">Set Bed Time</string>
    <string name="mindSleepHours">Hours</string>
    <string name="mindSleepMinutes">Minutes</string>
    <string name="mindSleepHoursCount">Hours</string>
    <string name="mindSleepMinutesCount">Minutes</string>
    <string name="mindSleepChangeTime">Change Time</string>
    <string name="mindSleepAlarm">Set Alarm</string>
    <string name="mindSleepCalculate">Calculate</string>
    <string name="mindSleepStartTime">From </string>
    <string name="mindSleepEndTime">To </string>
    <string name="mindSleepNegativeHeader">Not Enough Sleep!</string>
    <string name="mindSleepNegFeedback">Try to get at least 7 hours of sleep</string>
    <string name="mindSleepPositiveHeader">Great!</string>
    <string name="mindMeditateHeader">Meditation Timer</string>
    <string name="mindMeditateTimerBtn">Timer</string>
    <string name="mindMeditateTimesBtn">Time Meditated</string>
    <string name="mindMeditateTimesHeader">My meditation times</string>
    <string name="mindMeditateTimerStartBtn">Start</string>
    <string name="mindMeditateTimerStopBtn">Stop</string>
    <string name="mindMeditateTimerResetBtn">Reset</string>
    <string name="mindMeditateTImesDate">Date</string>
    <string name="mindMeditateTImesTime">Meditated Time</string>
    <string name="mindMeditateTimesTotalLbl">Total time</string>
    <string name="mindMeditateTimesTotalHint">Total time</string>
    <string name="mindTipsHeader">Mind Tips</string>
    <string name="mindTipsSelectBtn">Select</string>
    <string name="mindTipsDisplayTextView">tips</string>
    <string-array name="mindTipsSpinner">
        <item>Stress</item>
        <item>Focus</item>
        <item>Memory</item>
    </string-array>
    <string name="mindJournalsHeader">My Journals</string>
    <string name="mindCreateJournalTitle">New journal</string>
    <string name="mindCreateJournalLabel">Add Journal</string>
    <string name="mindUpdateJournalLabel">Update Journal</string>
    <string name="mindCreateJournalDate">Date</string>
    <string name="mindCreateJournalRating">Rate your day</string>
    <string name="mindCreateJJournalDescHint">your thoughts..</string>
    <string name="mindCreateJournalTypeDate">enter date</string>
    <string name="mindCreateJournalSaveBtn">Save</string>
    <string name="mindUpdateJournalSaveBtn">Update</string>
    <string name="mindJournalDeleteBtn">Delete</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mindCreateJournalNote">Note</string>
    <string name="DietDashSub1">Track my Calories</string>
    <string name="DietDashSub2">Plan my Diet</string>
    <string name="DietDashSub4">Nutritional Facts</string>
    <string name="DietDashSub3">My Healthy Recipes</string>
    <string name="DietDashLbl">My Diet Dashboard</string>
    <string name="TrackCalorieLbl1">Enter food intake in grams</string>
    <string name="IntakeDateLbl">Date of intake :</string>
    <string name="CalorieRecLbl1">Carbohydrates:</string>
    <string name="CalorieRecLbl2">Proteins:</string>
    <string name="CalorieRecLbl3">Fats:</string>
    <string name="SaveandCalcBtn">Calculate Total Calories</string>
    <string name="EnterDateHint">Enter the Date</string>
    <string name="EnterIntakeHint">Enter Intake (in g)</string>
    <string name="CalcSummary">Summary</string>
    <string name="CalorieLbl">Calories</string>
    <string name="TotalCalLbl">Total Calories</string>
    <string name="SaveRecBtnLbl">Save Record</string>
    <string name="IdealCalLbl1">Did you know the Ideal Proportions of each food type?</string>
    <string name="TrackCalorieBtn2">View Previous Intake</string>
    <string name="TrackCalorieBtn1">Calculate Calorie Intake</string>
    <string name="PlanMealBtn1">Create a Meal Plan</string>
    <string name="PlanMealBtn2">View my Meal Plans</string>
    <string name="DayLbl">Day :</string>
    <string name="BreakfastLbl">Breakfast :</string>
    <string name="LunchLbl">Lunch :</string>
    <string name="TeaTimeLbl">Tea Time :</string>
    <string name="DinnerLbl">Dinner :</string>
    <string name="dayHint">Enter the day of the week</string>
    <string name="MealsHint">What would you have?</string>
    <string name="CreateBtnLbl">Create</string>
    <string name="MyPlansLbl">My Meal Plans</string>
    <string name="didUKnowLbl1">Did you know</string>
    <string name="didUKnowLbl2">The Ideal Daily Diet Recommendations?</string>
    <string name="fruitsVeglbl1">Fruits and Vegetables</string>
    <string name="fruitsVeglbl2">At least 400 g,or five portions</string>
    <string name="fatsLbl1">Fats</string>
    <string name="fatsLbl2">Less than 30% of total energy intake</string>
    <string name="saltLbl">Salts</string>
    <string name="saltLbl2">Less than 5 g per day is highly recommended</string>
    <string name="sugarsLbl1">Sugars</string>
    <string name="sugarsLbl2">Less than 10% of total energy intake</string>
    <string name="AddRecipeLbl">Create a Healthy Recipe</string>
    <string name="ViewRecipeLbl">View my saved Recipes</string>
    <string name="recipeNameLbl">Recipe Name</string>
    <string name="ingreLbl">Ingrediants</string>
    <string name="methodLbl">Method</string>
    <string name="calorieLbl">Calories (per g)</string>
    <string name="recipeNamehint">Enter recipe name</string>
    <string name="ingreHint">Enter the ingrediants</string>
    <string name="methodHint">Enter the method</string>
    <string name="caloriHint">Enter no of calories per g</string>
    <string name="savedRecipeLbl">My Saved Recipies</string>
    <string name="AddScheduleBtn">Add Schedule</string>
    <string name="AddBtn">Add</string>
    <string name="DownloadBtn">Download</string>
    <string name="SearchLbl">Search</string>
    <string name="SeeMoreBtn">See More</string>
    <string name="ViewMyListsBtn">View My Lists</string>
    <string name="AddToListBtn">Add to list</string>
    <string name="CopyNumBtn">Copy Number</string>
    <string name="ViewMySchedulesBtn">View My Schedules</string>
    <string name="newListBtn">New List</string>
    <string name="searchHint">Enter day..</string>
    <string name="carbDaily">Carbohydrates - xxCal</string>
    <string name="protdaily">Protein-xCal</string>
    <string name="Fatdaily">Fats - xxCal</string>
    <string name="nutriLbl">Nutritional Facts you must know!</string>
    <string name="HealthTipsHeading">Tips when taking daily medicine</string>
    <string name="HealthTipsText">Keep a list\n\nTake your meds at the same time\n\nLeave yourself notes\n\nUse a pillbox\n\nKeep a calendar\n\nSet an alarm\n\n</string>
    <string name="StartYourScheduleTodayBtn">Start Your Schedule Today</string>
    <string name="MyDailyMedicineSchedulesHeading">My Daily Medicine Schedules</string>
    <string name="SaveToGalleryBtn">Save list to gallery</string>
    <string name="ListName">Name</string>
    <string name="ListNameLbl">List name</string>
    <string name="qtyLbl">Qty</string>
    <string name="MedcineLbl">Medicine</string>
    <string name="MyMedicineListsHeading">My Medicine Lists</string>
    <string name="mindSleepPosFeedback">having more than 8 hours of sleep</string>
    <string name="NewMedlbl">Add New Medicine</string>
    <string name="MedNamelbl">Medicine Name</string>
    <string name="pharNameLbl">Pharmacy name</string>
    <string name="descriptionlbl">Description</string>
    <string name="pricelbl">Price</string>
    <string name="EditMedLbl">Edit Medicine</string>
    <string name="totalPrice">Total</string>
    <string name="morningLbl">Morning</string>
    <string name="afternoonlbl">Afternoon</string>
    <string name="nightLbl">Night</string>
    <string name="Workoutbtn">Add Workout</string>
    <string name="weeklylbl1">Weekly Planner</string>
    <string name="Myprobtn">My Profile</string>
    <string name="Myworkbtn">My Workouts</string>
    <string name="Fname">Full name</string>
    <string name="pAge">Age</string>
    <string name="pHeight" />
    <string name="p_Height">Height</string>
    <string name="p_weight">Weight</string>
    <string name="p_age">Age</string>
    <string name="FullWorkbtn">Full Body Workout</string>
    <string name="Withequipbtn">Workouts With Equipments</string>
    <string name="absWorkbtn">abs Workout</string>
    <string name="Workoutlbl">Workout Summary</string>
    <string name="MG_txt">Main Goal:- Build Muscle</string>
    <string name="TL_txt">Training Level:- Beginner</string>
    <string name="PD_txt">Program Duration:- 12 Weeks</string>
    <string name="DPW_txt">Days Per Week:- 3</string>
    <string name="Rec_txt">Recommended Workouts: DEADLIFT, SQUAT, BENCH PRESS,OVERHEAD PRESS,ROW</string>
    <string name="TPW_txt">Times Per Workout: 45-60 minutes</string>
    <string name="Chstexer_lbl">Chest Exercise</string>
    <string name="leg_lbl">Leg Exercise</string>
    <string name="arm_lbl">Arm Exercise</string>
    <string name="Exercise_lbl">Exercise 1 Summary</string>
    <string name="Exercise2_lbl">Exercise 2 Summary</string>
    <string name="abs_lbl">abs Workouts</string>
    <string name="search_txt">Workouts</string>
    <string name="today_lbl">Today</string>
    <string name="Setur_lbl">Set your daily goal</string>
    <string name="setadd_btn">Add Set</string>
    <string name="Squat_lbl">Squat</string>
    <string name="Bench_lbl">Bench Press</string>
    <string name="Leg_lbl">Leg Press</string>
    <string name="Over_lbl">Overhead Press</string>
    <string name="EstTime">Your estimated total Workout time</string>
    <string name="nutriFact1Age1">Cut down on Fast food and Fizzy Drink Intake</string>
    <string name="Est_calorieburnt">Your estimated calorie burnt today</string>
    <string name="Edit_btn">Edit my set</string>
    <string name="Delete_btn">Delete my set</string>
    <string name="chest_newtxt">Dumbbell Squeeze Press-10 reps, Incline barbell bench press-10 reps, Incline dumbbell bench press-12 reps, Close-grip barbel bench press-15reps, Decline press up-15 reps</string>
</resources>