<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ThemeCol2"
    tools:context=".Fullbody">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="220dp"
        android:text="@string/Workoutlbl"
        android:textSize="30sp" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:text="Full Body Workout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/ThemeCol3"
        android:theme="?attr/actionBarTheme" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:src="@android:drawable/ic_menu_gallery" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MG_txt"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="300dp"/>

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TL_txt"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="340dp"/>

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PD_txt"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="380dp" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TPW_txt"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="420dp"/>
    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DPW_txt"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="460dp"/>


    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="500dp"
        android:text="@string/Rec_txt"
        android:textColor="@color/design_default_color_error"
        android:textSize="24sp" />


</FrameLayout>