<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="5pt"
    tools:context=".mindandyou.MindCreateJournal">

    <RelativeLayout
        android:id="@+id/mind_journal_create_title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/mind_journal_create_textview"
            style="@style/headingFontText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50pt"
            android:layout_marginTop="10pt"
            android:text="@string/mindCreateJournalTitle" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mind_journal_create_title_bar"
        android:layout_marginVertical="26dp"
        android:backgroundTint="@color/white"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/datelbl_createMindJournal"
            style="@style/generalFontText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/DashboardCol3"
            android:text="@string/mindCreateJournalDate" />

        <EditText
            android:id="@+id/dateEdt_createMindJ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/mindCreateJournalTypeDate"
            android:textColorHint="@color/IndividualDashboardCol3"
            android:textColor="@color/ThemeCol2"
            android:inputType="date"
            android:minHeight="48dp"
            android:paddingBottom="3pt"
            android:textSize="10pt" />

        <TextView
            style="@style/generalFontText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/DashboardCol3"
            android:text="@string/mindCreateJournalRating" />

        <EditText
            android:id="@+id/mind_journal_create_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColorHint="@color/IndividualDashboardCol3"
            android:textColor="@color/ThemeCol2"
            android:hint="enter rate"
            android:textSize="10pt"
            android:inputType="numberDecimal" />

        <TextView
            style="@style/generalFontText"
            android:textColor="@color/DashboardCol3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="3dp"
            android:text="@string/mindCreateJournalNote" />

        <EditText
            android:id="@+id/mind_journal_create_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:gravity="top"
            android:hint="@string/mindCreateJJournalDescHint"
            android:textColorHint="@color/IndividualDashboardCol3"
            android:textColor="@color/ThemeCol2"
            android:minLines="6"
            android:padding="12dp"
            android:textSize="10pt" />

        <Button
            android:id="@+id/mind_journal_add_btn"
            style="@style/buttonStyle"
            android:layout_width="300dp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:text="@string/mindCreateJournalSaveBtn" />

    </LinearLayout>



</RelativeLayout>