<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5pt"
    tools:context=".MindMeditateTimesFr">

    <TableRow>

        <TextView
            android:id="@+id/mind_meditate_times_header"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/mindMeditateTimesHeader"
            android:layout_marginBottom="10dp"
            style="@style/headingFontText"
             />
    </TableRow>


    <TableRow android:padding="5dp" android:background="@color/ThemeCol2" >
    <TextView
        android:id="@+id/mind_meditate_times_date_column"
        style="@style/generalFontText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/mindMeditateTImesDate"/>

    <TextView
        android:id="@+id/mind_meditate_times_time_column"
        style="@style/generalFontText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/mindMeditateTImesTime"/>
        </TableRow>


    <TableRow android:padding="5dp" android:background="@color/ThemeCol4">
        <TextView
            android:layout_width="wrap_content"
            style="@style/generalFontText"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/generalFontText"
            android:layout_weight="1"/>
    </TableRow>

    <TableRow android:padding="5dp" android:background="@color/ThemeCol4">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/generalFontText"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/generalFontText"
            android:layout_weight="1"/>
    </TableRow>

    <TableRow android:padding="5dp" android:background="@color/ThemeCol3">
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/generalFontText"
            android:text="@string/mindMeditateTimesTotalLbl"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/generalFontText"
            android:layout_weight="1"/>
    </TableRow>

</TableLayout>